# Elements_finis

./: Assemblage.cpp  Assemblage.h  CMakeCache.txt  CMakeLists.txt  DataFile.cpp  DataFile.h  Geometry.cpp  Geometry.h  Makefile  Resolution.cpp  Resolution.h  Resultats.vtk  Solveur.cpp  Solveur.h  cmake_install.cmake  contrainte.txt  contrainte_fibre.txt  contrainte_matrice.txt  data.txt  main.cc  mesh.h  run  sourceAndBord.cpp
Mesh/: maillage9_fin.mesh  maillage9_moyen.mesh  maillage_image100_fin.mesh  maillage_image10_fin.mesh  maillage_image2_fin.mesh  maillage_image3_fin.mesh  maillage_image4_fin.mesh  maillage_image5_fin.mesh  maillage_image6_fin.mesh  maillage_image7_fin.mesh  maillage_image8_fin.mesh  maillage_image9_fin.mesh  test_abdoul5.mesh  test_abdoul8.mesh  test_abdoul9.mesh
